--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,18 +1,47 @@
+/* Colors */
+.bg-default{background-color: #004226 !important;}
+.bg-primary{background-color: #f94840 !important;}
+.bg-secondary{background-color: #fdbe17 !important;}
+.bg-dark{background-color: #363759 !important;}
+.bg-green{background-color: #01b882 !important;}
+.bd-default{border-color: #004226 !important;}
+.bd-primary{border-color: #f94840 !important;}
+.bd-secondary{border-color: #fdba43 !important;}
+.bd-dark{border-color: #363759 !important;}
+.bd-green{border-color: #01b882 !important;}
+.text-default{color: #004226 !important;}
+.text-primary{color: #f94840 !important;}
+.text-secondary{color: #fdba43 !important;}
+.text-dark{color: #363759 !important;}
+.text-green{color: #01b882 !important;}
+.field:focus{color: #004226;}
+.btn-default{background-color: #004226;}
+.btn-primary{background-color: #f94840;}
+.btn-secondary{background-color: #fdba43;}
+.btn-link{color: #f94840;}
+
+/* Styles */
 .list .product {
-	background: #fbfbfb;
-	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-	-webkit-transition: all 250ms;
-	-moz-transition: all 250ms;
-	transition: all 250ms;
+  background: #fbfbfb;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  -webkit-transition: all 250ms;
+  -moz-transition: all 250ms;
+  transition: all 250ms;
 }
 
 .list .product:hover {
-	box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-	-webkit-transform: translateY(-5px);
-	-moz-transform: translateY(-5px);
-	transform: translateY(-5px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  -webkit-transform: translateY(-5px);
+  -moz-transform: translateY(-5px);
+  transform: translateY(-5px);
+}
+
+.textarea {
+  padding: 15px;
+  height: auto;
+  line-height: normal;
 }
 
 .clear-decoration {
-	text-decoration: none;
+  text-decoration: none;
 }
