--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,3 +45,24 @@
 .clear-decoration {
   text-decoration: none;
 }
+
+.header {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  height: 60px;
+}
+
+.sticky .logo {
+  height: 60px;
+}
+
+.sticky + .content {
+  margin-top: 204px;
+}
