--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,8 +21,11 @@
 .btn-link{color: #f94840;}
 
 /* Styles */
-.list .product {
+body{
   background: #fbfbfb;
+}
+
+.list .product {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   -webkit-transition: all 250ms;
   -moz-transition: all 250ms;
@@ -64,5 +67,5 @@
 }
 
 .sticky + .content {
-  margin-top: 204px;
+  margin-top: 210px;
 }
